Closed Bug 573188 Opened 16 years ago Closed 16 years ago

nsTextEditorState::SetValue leaks

Categories

(Core :: DOM: Editor, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jruderman)

References

Details

(Keywords: memory-leak, regression, valgrind)

Attachments

(2 files)

1765 nsString value(aValue); 1766 nsContentUtils::PlatformToDOMLineBreaks(value); 1767 *mValue = ToNewUTF8String(value); I think this leaks the char* created by ToNewUTF8String, after making a copy of it. I wrote a patch that makes the Valgrind warning go away, but I don't know what I'm doing here or how to test that the code still works, so please review carefully.
Attachment #452416 - Flags: review?(roc)
Assignee: nobody → jruderman
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: