Bug 573188 - Fix string leak in nsTextEditorState::SetValue. r=roc